Bug 418258 - ssh:// links not working in Plasma 5.18.2 and Frameworks 5.67.0
Summary: ssh:// links not working in Plasma 5.18.2 and Frameworks 5.67.0
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 5.67.0
Platform: Neon Linux
: VHI normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-02-27 15:35 UTC by Christian González
Modified: 2020-03-19 20:37 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.69
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Christian González 2020-02-27 15:35:20 UTC
SUMMARY

After upgrading to Plasma 5.18.2 and Frameworks 5.67.0 on KDE Neon I can't use ssh:// links anymore.

Before the upgrade, clicking an URL like "ssh://user@host" launch Konsole with an SSH conection open to the server. Now it shows a popup with this error message: "File not found: ssh://user@host".

If I use "xdg-open ssh://root@172.19.99.1" from Konsole I get this:

> command= "ktelnetservice5 %u" args= ("ktelnetservice5 %u", "ssh://root@172.19.99.1")
> kf5.kio.core: couldn't create slave: "klauncher ha respondido: Protocolo desconocido «ssh».\n"

("Protocolo desconocido" is spanish for "Unknown protocol".)

But if I use "ktelnetservice5 ssh://root@172.19.99.1" then all is working without problem.


STEPS TO REPRODUCE

1. Click on any link with this format "ssh://user@host"
2. 
3. 

OBSERVED RESULT

A popup is shown with this error message: "File not found: ssh://user@host".

EXPECTED RESULT

Konsole is lauched with an SSH session established to the server.


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: KDE Neon 5.18
KDE Plasma Version: 5.18.2
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1

ADDITIONAL INFORMATION

Before the upgrade, ssh:// links was working without problem.
Comment 1 carl 2020-02-29 15:16:33 UTC
I can confirm this bug on master.
Comment 2 Christian González 2020-03-09 11:42:36 UTC
This is a very annoying bug for us. Our workflow has been seriously affected. I'm even looking to other desktops for the first time in more than 10 years.

Is there a known workaround? Can I help to better diagnose the problem?
Comment 3 Ahmad Samir 2020-03-12 07:01:47 UTC
FWIW, a proposed fix is at https://phabricator.kde.org/D27999
Comment 4 Christian González 2020-03-12 11:23:23 UTC
(In reply to Ahmad Samir from comment #3)
> FWIW, a proposed fix is at https://phabricator.kde.org/D27999

Thank you! Hope it gets aproved soon.
Comment 5 Ugo Viti 2020-03-18 08:46:18 UTC
(In reply to Christian González from comment #4)
> (In reply to Ahmad Samir from comment #3)
> > FWIW, a proposed fix is at https://phabricator.kde.org/D27999
> 
> Thank you! Hope it gets aproved soon.

Waiting fixed upstream, right now use this "brutal" quick workaround, using KDE 4 kde-open instead KDE 5 kde-open5 (tested on Fedora Core 31 and KDE 5.68):

$ sudo mv /usr/bin/kde-open5 /usr/bin/kde-open5.dist && sudo ln -s /usr/bin/kde-open /usr/bin/kde-open5
Comment 6 Christian González 2020-03-18 23:15:33 UTC
(In reply to Ugo Viti from comment #5)
> Waiting fixed upstream, right now use this "brutal" quick workaround, using
> KDE 4 kde-open instead KDE 5 kde-open5 (tested on Fedora Core 31 and KDE
> 5.68):
> 
> $ sudo mv /usr/bin/kde-open5 /usr/bin/kde-open5.dist && sudo ln -s
> /usr/bin/kde-open /usr/bin/kde-open5

THANK YOU!!! You've saved my life :-)
Comment 7 Ahmad Samir 2020-03-19 20:37:33 UTC
Git commit 14b7f2c7ee72bbf500625122a4b51c81f02e421f by Ahmad Samir.
Committed on 19/03/2020 at 20:37.
Pushed by ahmadsamir into branch 'master'.

[DesktopExecParser] Open {ssh,telnet,rlogin}:// urls with ktelnetservice

Summary: Extend krununittest to test ktelnetservice.

Test Plan:
$ kde-open5 ssh://user@1.1.1.1
  outputs:
  command= "ktelnetservice5 %u" args= ("ktelnetservice5 %u", "ssh://user@1.1.1.1")
  kf5.kio.core: couldn't create slave: "klauncher said: Unknown protocol 'ssh'.\n"

and you get a message box with "File not found: ssh://user@1.1.1.1".

Apply diff then try again, now a terminal window is launched by
ktelnetservice5 and ssh is invoked as expected.

FIXED-IN: 5.69

Reviewers: #frameworks, dfaure, sitter, meven, feverfew, ngraham

Reviewed By: dfaure, feverfew, ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27999

M  +25   -0    autotests/krununittest.cpp
M  +1    -0    autotests/krununittest.h
M  +3    -0    src/core/desktopexecparser.cpp

https://commits.kde.org/kio/14b7f2c7ee72bbf500625122a4b51c81f02e421f