[DesktopExecParser] Open {ssh,telnet,rlogin}:// urls with ktelnetservice

Summary: Extend krununittest to test ktelnetservice.

Test Plan:
$ kde-open5 ssh://user@1.1.1.1
  outputs:
  command= "ktelnetservice5 %u" args= ("ktelnetservice5 %u", "ssh://user@1.1.1.1")
  kf5.kio.core: couldn't create slave: "klauncher said: Unknown protocol 'ssh'.\n"

and you get a message box with "File not found: ssh://user@1.1.1.1".

Apply diff then try again, now a terminal window is launched by
ktelnetservice5 and ssh is invoked as expected.

BUG: 418258

FIXED-IN: 5.69

Reviewers: #frameworks, dfaure, sitter, meven, feverfew, ngraham

Reviewed By: dfaure, feverfew, ngraham

Subscribers: ngraham, kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D27999